# mdeck

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  slides.md
src/mdeck/: cli.py
tests/: test_cli.py
